--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "private": true,
   "devDependencies": {
-    "laravel-elixir": "*"
+    "gulp": "^3.8.8"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "datatables": "^1.10.12",
+    "datatables-bootstrap3-plugin": "^0.4.0",
+    "font-awesome": "^4.6.3",
+    "jquery": "^2.2.4",
+    "jquery.growl": "^1.3.1",
+    "jquery.hotkeys": "^0.1.0",
+    "laravel-elixir": "^5.0.0",
+    "lodash": "^4.13.1",
+    "vue": "^1.0.24"
   }
 }
