--- a/package.json
+++ b/package.json
@@ -1,17 +1,40 @@
 {
+  "scripts": {
+    "start": "webpack --watch",
+    "build": "webpack"
+  },
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "gulp": "^3.8.8",
+    "html-loader": "^0.4.3",
+    "laravel-elixir": "^5.0.0",
+    "less-loader": "^2.2.3",
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.3.2",
+    "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.5.2",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.1",
+    "webpack-merge": "^0.14.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
     "datatables": "^1.10.12",
     "datatables-bootstrap3-plugin": "^0.4.0",
     "font-awesome": "^4.6.3",
+    "font-awesome-loader": "0.0.1",
     "jquery": "^2.2.4",
     "jquery.growl": "^1.3.1",
     "jquery.hotkeys": "^0.1.0",
-    "laravel-elixir": "^5.0.0",
     "lodash": "^4.13.1",
     "vue": "^1.0.24"
   }
