--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     },
     "devDependencies": {
         "gulp": "^3.9.1",
-        "laravel-elixir": "^6.0.0-9",
-        "lodash": "^4.14.0"
+        "laravel-elixir": "^6.0.0-9"
     }
 }
