--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "mrcore/bootswatch-theme",
+    "version": "5.3",
     "type": "library",
     "description": "Mrcore Bootswatch Base Theme",
     "keywords": ["mrcore", "framework", "theme", "laravel"],
